# aoc-rust

./: .gitignore  Cargo.toml  README.md
benches/: aoc_benches.rs  benchmark.rs  dsu_bench.rs  grid_bench.rs  point_bench.rs
src/: lib.rs  main.rs
src/utils/: disjointset.rs  grid.rs  interval_tree.rs  intervaltree.rs  mod.rs  point.rs  read_lines.rs  simplex.rs
src/year2024/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  mod.rs
src/year2025/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  mod.rs
src/year2025/inputs/: day06.inp
src/year2025/test_inputs/: day06.inp1
