[package]
name = "aoc"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
itertools = "0.14.0"
thiserror = "2.0.17"
regex = "1.12.2"
nalgebra = "0.34.1"
approx = "0.5.1"
num = "0.4.3"
rayon = "1.11.0"


[dev-dependencies]
criterion = "0.8.1"
paste = "1.0.15"
pretty_assertions = "1.4.1"

[[bench]]
name = "benchmark"
harness = false
